  * Specify the manpage doctype for AsciiDoc man sources.
  * Remove the 'rules' dependency on 'Makefile', remove 'Makefile', and
    perform cleanup on the debhelper build process:
    - Reduce the number of master bin files defined in piuparts-master.install
      by removing ".in" and ".py" files after the install step.
    - Do the samefor piuparts-slave.install

  [ Holger Levsen ]
  * piuparts.1.txt, README.txt and README_pejacevic.txt: proof-read and
    cleaned up.
  * Move master-slave related documentation from README.txt to
    README_server.txt and leave a pointer in the former.
  * Rename README.txt to README_1st.txt.
  * piuparts-master.deb:
    - Ship README_server.txt.
    - Recommend devscripts and libsoap-lite-perl (for gather_bts_stats).
  * piuparts-report.py: Add a link to README_server.html.
  * master-bin/gather_bts_stats: write bts_stats.txt to master-directory.
  * conf/crontab-master: run gather_bts_stats daily.
  * master-bin/prepare_backup: backup bts_stats.txt and do not backup
    sources.txt.
  * piuparts.py: categorize adequate results using inadequate_tags,
    boring_tags, ignored_tags and unknown. Show adequate exit code if
    non-zero.
  * Add known_problems/*inadequate*.conf for all adequate tags we care about.
  * htdocs/index.tpl: Improve description about piuparts.debian.org.
    (Closes: #700848)

  [ Andrew Starr-Bochicchio ]
  * piuparts.py:
    - Move default keyring to distro defaults.  (Closes: #710346)
    - When distro defaults are explicitly specified, use the distro default
      mirrors (Closes: #710347).

 -- Andreas Beckmann <anbe@debian.org>  Mon, 27 May 2013 18:24:27 +0200

piuparts (0.52) unstable; urgency=low

  [ Andreas Beckmann ]
  * piuparts.py:
    - Really disable PDiffs.  (Closes: #708241)
  * piuparts-master.in:
    - Use timeout to prevent master from getting stuck.  (Closes: #701618)
  * piuparts-slave.py:
    - Report upgrade tests involving downgrades as untestable.